grpc_springboot_demo/servicemesh/control_plane/hello1_destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: grpc-hello
  name: hello1-dr
spec:
  host: hello1-svc
  subsets:
    - name: v1
      labels:
        version: v1
